--- a/QtRays/src/ui/mainwindow.ui
+++ b/QtRays/src/ui/mainwindow.ui
@@ -51,7 +51,7 @@
   </action>
   <action name="actionStart">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="text">
     <string>Start</string>
