Removed RenderWorker class. That functionality will be handled by the Renderer class now. Also added some temporary junk to the UI to test messing with and displaying a QImage.

--- a/QtRays/src/ui/mainwindow.ui
+++ b/QtRays/src/ui/mainwindow.ui
@@ -13,7 +13,19 @@
   <property name="windowTitle">
    <string>QtRays</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>9</x>
+      <y>9</y>
+      <width>781</width>
+      <height>541</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="imagelayout"/>
+   </widget>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
